# gitlabci-checker

./: .flake8  .gitlab-ci.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: test-workflow.yml
gitlabci_checker/: __init__.py  cli.py  helpers.py
tests/: conftest.py  test_cli.py  test_helpers.py
