[tool.poetry]
name = "gitlabci-checker"
version = "0.1.0"
description = "Checks if your gitlab-ci pipeline compiles correctly."
authors = ["Lorenzo Maffioli <lorenzo.maffioli@naviparking.com>"]
readme = "README.md"

repository = "https://github.com/lorenzophys/gitlabci-checker"
keywords = ["gitlab", "ci", "pipeline"]

[tool.poetry.scripts]
gitlabci-checker = "gitlabci_checker.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.28.1"
configparser = "^5.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
flake8-simplify = "^0.19.3"
flake8-bugbear = "^22.10.27"
flake8-comprehensions = "^3.10.1"
mypy = "^0.990"
pydocstyle = "^6.1.1"
pre-commit = "^2.20.0"
tox = "^3.27.0"
tox-pyenv = "^1.1.0"
types-setuptools = "^65.6.0.2"
toml = "^0.10.2"
types-requests = "^2.28.11.7"

[tool.black]
max-line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
