[tool.poetry]
name = "gitlabci-checker"
version = "0.1.2"
description = "Checks if your gitlab-ci pipeline compiles correctly."
authors = ["Lorenzo Maffioli <lorenzo.maffioli@gmail.com>"]
readme = "README.md"

repository = "https://github.com/lorenzophys/gitlabci-checker"
keywords = ["gitlab", "ci", "pipeline"]

[tool.poetry.scripts]
cicheck = "gitlabci_checker.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.10.1"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
flake8 = "^5.0.4"
flake8-simplify = "^0.21.0"
flake8-bugbear = "^22.10.27"
flake8-comprehensions = "^3.10.1"
mypy = "^1.0.0"
pydocstyle = "^6.1.1"
pre-commit = "^3.0.0"
tox = "^4.0.0"
tox-pyenv = "^1.1.0"
types-setuptools = "^65.6.0.2"
toml = "^0.10.2"
types-requests = "^2.28.11.7"
pytest-httpserver = "^1.0.6"

[tool.black]
max-line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
